--- a/zigbee2mqtt-proxy/config.json
+++ b/zigbee2mqtt-proxy/config.json
@@ -2,7 +2,7 @@
     "name": "Zigbee2MQTT Proxy",
     "version": "0.2.0",
     "slug": "zigbee2mqtt_proxy",
-    "description": "Proxy for externally running Zigbee2MQTT",
+    "description": "Proxy for externally running MagicMirror Gateway",
     "url": "https://github.com/zigbee2mqtt/hassio-zigbee2mqtt/tree/master/zigbee2mqtt-proxy",
     "arch": [
       "aarch64",
@@ -21,10 +21,10 @@
       "config:ro"
     ],
     "ports": {
-      "8099/tcp": null
+      "8081/tcp": null
     },
     "ports_description": {
-      "8099/tcp": "Frontend tcp-listen port"
+      "8081/tcp": "Frontend tcp-listen port"
     },
     "options": {
       "server": null,
